src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TagAndIncludeUnderComplexProperty.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 
    <DockPanel.Resources>
        <SolidColorBrush x:Key="GreenBrush" Color="Green" />
    </DockPanel.Resources>
    <Button>
        <Button.Background>
            <SolidColorBrush Color="Red" />
            <StaticResource ResourceKey="GreenBrush" />

        </Button.Background>
    </Button>
</DockPanel>
</Page>
